--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
             "outputPath": "dist/pf-baez-62840",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": ["zone.js"],
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -51,7 +53,6 @@
               "optimization": false,
               "sourceMap": true
             }
-
           },
           "defaultConfiguration": "production"
         },
@@ -73,7 +74,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": ["zone.js", "zone.js/testing"],
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -82,7 +86,10 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss", "node_modules/bootstrap/dist/css/bootstrap.min.css"],
+            "styles": [
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+            ],
             "scripts": []
           }
         }
@@ -90,6 +97,9 @@
     }
   },
   "cli": {
-    "analytics": "1f733de5-d01a-42a9-9ced-ec7fa0b83669"
+    "analytics": "1f733de5-d01a-42a9-9ced-ec7fa0b83669",
+    "schematicCollections": [
+      "@ngrx/schematics"
+    ]
   }
 }
